# hiking_and_tracking_mgt

./: TODO.md  hiking-system.db  hiking_system.db  main.py  package-lock.json  pyproject.toml  requirements.txt
app/: auth.py  database.py  main.py  seeder.py
app/models/: __init__.py  booking.py  hiking_event.py  mountain.py  permission.py  review.py  role.py  user.py
app/routers/: __init__.py  admin.py  athentication.py  auth.py  bookings.py  events.py  mountains.py  reviews.py
app/schemas/: __init__.py  booking.py  event.py  mountain.py  review.py  user.py
public/: index.html
