[project]
name = "hiking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt<5",
    "fastapi[standard]>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
]
